# async-architecture-workshop-2021

./: .gitignore  docker-compose.yml  dump.sql  readme.md
accounting-service/: Makefile  accounting.cabal
accounting-service/src/: Actions.hs  DB.hs  Kafka.hs  Main.hs  Types.hs
auth-service/: auth.cabal  readme.md
auth-service/src/: DB.hs  Main.hs  Types.hs
docs/: events.md  requirments.md  services.md
kafka/: docker-compose.yml  readme.md
task-service/: Makefile  readme.md  todo-app.cabal
task-service/src/: DB.hs  Handlers.hs  Main.hs  Types.hs  kafka.hs
